# Cancer_Prediction-MLOPs-

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  COMPLETE_RUN_GUIDE.md  FINAL_SUMMARY.md  GITHUB_PUSH_GUIDE.md  LICENSE  Makefile  PROJECT_SUMMARY.md  PUSH_TO_GITHUB.md  README.md  README_OLD.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.claude/: settings.local.json
.github/workflows/: cd.yml  ci.yml  model_training.yml
configs/: data_config.yaml  deployment_config.yaml  logging_config.yaml  model_config.yaml  training_config.yaml
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  mlops_tools_guide.md  model_card.md  quick_start.md
infrastructure/kubernetes/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  all-in-one.yaml  api-deployment.yaml  cleanup.sh  configmaps.yaml  deploy.sh  grafana-deployment.yaml  ingress.yaml  kustomization.yaml  local-storage-fix.yaml  mlflow-deployment.yaml  namespace.yaml  persistent-volumes.yaml  prometheus-deployment.yaml  quick-deploy-no-storage.yaml  status.sh  troubleshoot.sh  update.sh
models/: registry.json
monitoring/prometheus/: prometheus.yml
sample_code/: README.md
scripts/: batch_predict.py  evaluate_model.py  run_eda.py  train_model.py
src/: __init__.py
src/api/: __init__.py  app.py  middleware.py  schemas.py
src/data/: __init__.py  load_data.py  preprocess.py  split.py  validate.py
src/features/: __init__.py  build_features.py
src/models/: __init__.py  base_model.py  evaluate.py  gradient_boosting.py  hybrid_ensemble.py  logistic_regression.py  neural_network.py  predict.py  registry.py  train.py
src/monitoring/: __init__.py  data_drift.py  performance.py
tests/: conftest.py
(+19 files in other folders)
